--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/springboot
+#spring.datasource.url=jdbc:mysql://localhost:3306/springboot
+spring.datasource.url=jdbc:mysql://springbootbd.mysql.database.azure.com:3306/springboot?useSSL=true&requireSSL=false
 spring.datasource.username=springboot
-spring.datasource.password=mena0310
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.password=mena0310#
+spring.jpa.hibernate.ddl-auto=create
