--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,5 @@
 spring.datasource.url=jdbc:mysql://springbootbd.mysql.database.azure.com:3306/springboot?useSSL=true&requireSSL=false
 spring.datasource.username=springboot
 spring.datasource.password=mena0310#
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=create
