--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,4 @@ spring.datasource.url=jdbc:mysql://springbootbd.mysql.database.azure.com:3306/sp
 spring.datasource.username=springboot@springbootbd
 spring.datasource.password=mena0310#
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
