--- a/.github/workflows/master_demo-api-crud.yml
+++ b/.github/workflows/master_demo-api-crud.yml
@@ -28,7 +28,7 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: apicrud
-        path: '${{ github.workspace }}/target/*.jar'
+        path: '${{ github.workspace }}/target/*.war'
 
   deploy:
     runs-on: ubuntu-latest
